--- a/c/meterpreter/workspace/dump_sam/CMakeLists.txt
+++ b/c/meterpreter/workspace/dump_sam/CMakeLists.txt
@@ -25,7 +25,7 @@ if(MSVC)
 endif()
 
 set(LINK_LIBS psapi rpcrt4)
-target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
+target_link_libraries(${PROJECT_NAME} ${LINK_LIBS} ${MET_RDI_ASM})
 if(MSVC)
     target_link_options(${PROJECT_NAME} PUBLIC "/ignore:4070")
 endif()
