--- a/c/meterpreter/workspace/ext_server_python/CMakeLists.txt
+++ b/c/meterpreter/workspace/ext_server_python/CMakeLists.txt
@@ -55,7 +55,7 @@ set(LINK_LIBS
     ${LIBRESSL_LIB_DIR}/tls-20.lib
 )
 
-target_link_libraries(${PROJECT_NAME} ${LINK_LIBS})
+target_link_libraries(${PROJECT_NAME} ${LINK_LIBS} ${MET_RDI_ASM})
 if(MSVC)
     target_link_options(${PROJECT_NAME} PUBLIC "/ignore:4070")
 endif()
