Fix cmake files for kiwi builds

--- a/c/meterpreter/workspace/ext_server_kiwi/CMakeLists.txt
+++ b/c/meterpreter/workspace/ext_server_kiwi/CMakeLists.txt
@@ -46,6 +46,10 @@ else()
         '-D__success=DISCARD'
         '-D__FUNCTION__=""'
         '-D__struct_bcount=DISCARD'
+        '-D__nullterminated=SAL__nullterminated'
+        '-D__in_range=__RPC__in_range'
+        '-D__callback=SAL__callback'
+        '-D__deref_in_bcount_opt=SAL__deref_in_bcount_opt'
     )
 endif()
 
